kubernetes/create_httpd_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx5
  labels: 
    type: web-server
    app: my-app
spec:
  containers:
  - name: nginx-web-server
    image: nginx:1.17
    ports:
      - containerPort: 80
