kubernetes/simple-daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-demo-daemonset
  labels: 
    app: nginx-demo-daemonset
    version: v1
spec:
  selector:
    matchLabels:
      app: nginx-demo-daemonset
      version: v1
  template:
    metadata:
      labels:
        app: nginx-demo-daemonset
        version: v1
    spec:
      containers:
      - name: nginx-demo-daemonset
        image: objectiflibre/nginx-demo:red
